# Nexus-Engine

./: LICENSE  README.md
NexusEngine/: ARCHITECT.md  CMakeLists.txt  DevelopGuideLine.md  NexusEngine.sln
NexusEngine/BuildScript/Linux/: run_packacge.sh  server_execution.sh  source_build.sh  source_build_execution.sh  source_refresh.sh
NexusEngine/BuildScript/Windows/: run_packacge.ps1  source_refresh.ps1
NexusEngine/NexusDBRelay/NexusDBRelay/: Cargo.toml  config.toml
NexusEngine/NexusDBRelay/NexusDBRelay/src/: config.rs  dbagent.rs  dbconn.rs  dbpackets.rs  main.rs
NexusEngine/NexusDBRelay/NexusDBRelay/src/msg/: auth.rs  character.rs  mod.rs  opcodes.rs  reader.rs  validate.rs  writer.rs
NexusEngine/NexusDBRelay/NexusDBRelay/src/msg-action/: auth.rs  character.rs  mod.rs
NexusEngine/NexusEngine/: CMakeLists.txt  Connection.cpp  Connection.h  NexusEngine.vcxproj  NexusEngine.vcxproj.filters  Server.cpp  Server.h  ServerNet.cpp  ServerNet.h  main.cpp
NexusEngine/NexusEngine/Actor/: Actor.h  ActorSystem.h  Mailbox.h
NexusEngine/NexusEngine/Arbiter/: Arbiter.cpp  Arbiter.h  ArbiterSession.cpp  ArbiterSession.h
NexusEngine/NexusEngine/Game/Actors/: SessionActor.cpp  SessionActor.h  WorldActor.cpp  WorldActor.h  ZoneActor.cpp  ZoneActor.h
NexusEngine/NexusEngine/Game/Data/Faction/: FactionRegistry.cpp  FactionRegistry.h  FactionTypes.h
NexusEngine/NexusEngine/Game/Data/GameDataEntities/: CharacterEntityData.cpp  CharacterEntityData.h  EntityBase.cpp  EntityBase.h  MonsterEntityData.cpp  MonsterEntityData.h  NpcEntityData.cpp  NpcEntityData.h
NexusEngine/NexusEngine/Game/Data/GamePackets/: Packet-Auth.cpp  Packet-Auth.h  Packet-Chat.cpp  Packet-Chat.h  Packet-Example.hpp  Packet-Guide.md  Packet-Movement.cpp  Packet-Movement.h  Packet-Spawn.cpp  Packet-Spawn.h
NexusEngine/NexusEngine/Game/Data/Skill/: SkillDef.h  SkillRegistry.cpp  SkillRegistry.h
NexusEngine/NexusEngine/Game/Logic/: CommonLogicType.h  GameLogic.cpp  GameLogic.h  Item.cpp  Item.h
NexusEngine/NexusEngine/Game/Logic/Combat/: CombatProcessor.cpp  CombatProcessor.h
NexusEngine/NexusEngine/Game/Logic/Consumable/: Consumable.cpp  Consumable.h
NexusEngine/NexusEngine/Game/Logic/Equipment/: Equipment.cpp  Equipment.h
NexusEngine/NexusEngine/Game/Logic/Inventory/: Inventory.h
NexusEngine/NexusEngine/Game/Logic/Movement/: MovementProcessor.cpp  MovementProcessor.h
NexusEngine/NexusEngine/Game/Logic/Pawn/: ConsumableSlot.cpp  ConsumableSlot.h  EquipmentSlot.cpp  EquipmentSlot.h  ItemBag.cpp  ItemBag.h  ItemSlot.cpp  ItemSlot.h  Pawn.cpp  Pawn.h  PlayerItemComponent.cpp  PlayerItemComponent.h  PlayerPawn.cpp  PlayerPawn.h  SkinSlot.cpp  SkinSlot.h  Slot.h
NexusEngine/NexusEngine/Game/Logic/Skin/: Skin.cpp  Skin.h
NexusEngine/NexusEngine/Game/Messages/: GameMessages.h
NexusEngine/NexusEngine/Game/User/: User.cpp  User.h
NexusEngine/NexusEngine/Game/Zone/: Zone.cpp  Zone.h
NexusEngine/NexusEngine/NexusClient/: CMakeLists.txt  README.md
NexusEngine/NexusEngine/NexusClient/ClientLib/: CMakeLists.txt  NetClient.cpp  NetClient.h
NexusEngine/NexusEngine/NexusClient/ClientLib/Packets/: PacketBase.cpp  PacketBase.h
NexusEngine/NexusEngine/NexusClient/ClientLib/Platform/: Platform.h
NexusEngine/NexusEngine/NexusClient/DummyClient/: CMakeLists.txt  main.cpp
NexusEngine/NexusEngine/NexusClient/DummyClient/Packets/: GamePackets.hpp
NexusEngine/NexusEngine/NexustLauncher/: CLAUDE.md  Packages.md
NexusEngine/NexusEngine/NexustLauncher/NexusLauncher/: package-lock.json  package.json
NexusEngine/NexusEngine/NexustLauncher/NexusLauncher/src-tauri/: Cargo.toml  tauri.conf.json
NexusEngine/NexusEngine/NexustLauncher/NexusLauncher/src-tauri/src/: arbiter.rs  commands.rs  lib.rs  main.rs  server.rs
NexusEngine/NexusEngine/NexustLauncher/NexusLauncher/src/lib/components/: PlayerList.svelte  ProcessManager.svelte  ServerStats.svelte  StatusHeader.svelte
NexusEngine/NexusEngine/NexustLauncher/NexusLauncher/src/routes/: +page.svelte
NexusEngine/NexusEngine/Packets/: PacketBase.cpp  PacketBase.h
NexusEngine/NexusEngine/Platform/: Platform.h
NexusEngine/NexusEngine/Shared/: Logger.cpp  Logger.h
NexusEngine/NexusEngine/protocol_shared/: ArbiterOpcodes.h  NexusPacketBuilder.h  NexusTypes.h  Opcodes.h  PacketParser.h
NexusEngine/NexusEngine/protocol_shared/Packets/: Packet-Auth.cpp  Packet-Auth.h  Packet-Chat.cpp  Packet-Chat.h  Packet-Combat.cpp  Packet-Combat.h  Packet-Item.cpp  Packet-Item.h  Packet-Movement.cpp  Packet-Movement.h  Packet-Spawn.cpp  Packet-Spawn.h
