[package]
name    = "NexusDBRelay"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio      = { version = "1",   features = ["full"] }
sqlx       = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"
